tests/machine/x/c/group_by_multi_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:99:3: error: unknown type name ‘list_int’
   99 |   list_int _t4 = list_int_create(partsupp.len * suppliers.len * nations.len);
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:99:18: warning: implicit declaration of function ‘list_int_create’; did you mean ‘list_nationsItem_create’? [-Wimplicit-function-declaration]
   99 |   list_int _t4 = list_int_create(partsupp.len * suppliers.len * nations.len);
      |                  ^~~~~~~~~~~~~~~
      |                  list_nationsItem_create
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:116:12: error: request for member ‘data’ in something not a structure or union
  116 |         _t4.data[_t5] =
      |            ^
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:122:6: error: request for member ‘len’ in something not a structure or union
  122 |   _t4.len = _t5;
      |      ^
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:123:32: error: invalid initializer
  123 |   list_filteredItem filtered = _t4;
      |                                ^~~
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:124:30: error: invalid initializer
  124 |   list_groupedItem grouped = 0;
      |                              ^
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:125:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘list_groupedItem’ [-Wformat=]
  125 |   printf("%d\n", grouped);
      |           ~^     ~~~~~~~
      |            |     |
      |            int   list_groupedItem

   1: #include <stdio.h>
